gccida/c3/split_di
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_di/src/i386.c:6713:12: error: expected identifier or '('
 struct op = operands[num]; 
           ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_di/src/i386.c:6722:41: error: use of undeclared identifier 'machine_mode'
v5 = simplify_gen_subreg( SImode, op, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)op), 0); 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_di/src/i386.c:6722:56: error: expected expression
v5 = simplify_gen_subreg( SImode, op, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)op), 0); 
                                                       ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_di/src/i386.c:6727:41: error: use of undeclared identifier 'machine_mode'
v6 = simplify_gen_subreg( SImode, op, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)op), 4u); 
                                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_di/src/i386.c:6727:56: error: expected expression
v6 = simplify_gen_subreg( SImode, op, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)op), 4u); 
                                                       ^
5 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/split_di/src/obj/i386.o] Error 1
